--- a/pytest.ini
+++ b/pytest.ini
@@ -1,5 +1,4 @@
-[pytest]
-testpaths = mcp_client/tests
+testpaths = sec_mcp/tests
 python_files = test_*.py
 python_classes = Test*
 python_functions = test_*
