--- a/sec_mcp/config.json
+++ b/sec_mcp/config.json
@@ -1,6 +1,6 @@
 {
     "blacklist_sources": {
-        "OpenPhish": "https://openphish.com/feed.txt",
+        "OpenPhish": "https://raw.githubusercontent.com/openphish/public_feed/refs/heads/main/feed.txt",
         "PhishStats": "https://phishstats.info/phish_score.csv",
         "URLhaus": "https://urlhaus.abuse.ch/downloads/text/"
     },
