feat: Initialize React landing page with Tailwind CSS and Vite
- Add PostCSS configuration for Tailwind CSS.
- Create favicon SVG for the application.
- Implement main App component structure with Header, Hero, Features, Installation, API Reference, MCP Server, and Footer components.
- Add assets directory with a placeholder file.
- Develop API Reference component with detailed API functions and example usage.
- Create Features component showcasing key features of the sec-mcp toolkit.
- Implement Footer component with quick links and resource references.
- Add Header component for navigation.
- Create Hero component for the landing section with call-to-action buttons.
- Develop Installation component detailing installation and usage instructions.
- Implement MCP Server component explaining setup and available tools.
- Add global CSS file for Tailwind CSS styles.
- Set up main entry point for the React application.
- Configure Tailwind CSS with Vite for styling.
- Set up Vite configuration for development and deployment.

--- a/.gitignore
+++ b/.gitignore
@@ -70,3 +70,32 @@ coverage.xml
 .hypothesis/
 .pytest_cache/
 cover/
+
+# Node.js and React
+node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+.pnpm-debug.log*
+.npm/
+.pnp/
+.pnp.js
+.next/
+out/
+.vercel
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Vite
+react-landing-page/dist/
+react-landing-page/dist-ssr/
+react-landing-page/.vite/
+
+# Misc
+.DS_Store
+Thumbs.db
+*.pem
+*.cert
+*.key
