--- a/react-landing-page/package.json
+++ b/react-landing-page/package.json
@@ -9,8 +9,10 @@
     "serve": "vite preview"
   },
   "dependencies": {
+    "prismjs": "^1.30.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-syntax-highlighter": "^15.6.1",
     "tailwindcss": "^3.0.0"
   },
   "devDependencies": {
