--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,12 +4,12 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "sec-mcp"
-version = "0.2.2"
+version = "0.2.3"
 description = "Python toolkit providing security checks for domains, URLs, IPs, and more."
 readme = "README.md"
 license = { text = "MIT" }
 requires-python = ">=3.11"
-authors = [ { name = "Luong NGUYEN" } ]
+authors = [ { name = "Montimage" } ]
 dependencies = [
   "requests>=2.31.0",
   "httpx>=0.25.0",
