--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,10 +4,10 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "sec-mcp"
-version = "0.2.4"
+version = "0.2.6"
 description = "Python toolkit providing security checks for domains, URLs, IPs, and more."
 readme = "README.md"
-license = { text = "MIT" }
+license = "MIT"
 requires-python = ">=3.11"
 authors = [ { name = "Montimage" } ]
 dependencies = [
@@ -20,7 +20,6 @@ dependencies = [
   "tqdm>=4.66.0",
 ]
 classifiers = [
-  "License :: OSI Approved :: MIT License",
   "Programming Language :: Python :: 3",
   "Programming Language :: Python :: 3.11",
   "Topic :: Security",
