feat: Optimize MCP tools and reorganize project documentation
Major improvements to reduce token usage and improve project structure:

MCP Tools Optimization (45% reduction):
- Removed: flush_cache, get_update_history (low-value tools)
- Consolidated: 4 monitoring tools → get_diagnostics (5 modes)
- Renamed: get_blacklist_status → get_status (simpler)
- Result: 11 tools → 6 tools (~750-1000 token savings)

Benchmark Fixes:
- Fixed: add_cidr() → add_ip() (method didn't exist)
- Enhanced error handling in storage.py
- Added path normalization and better error messages
- Created run_benchmark.sh helper script

Documentation Reorganization:
- Moved development docs to dev-docs/ (git-ignored)
- Completely restructured README.md with TOC
- Created comprehensive BENCHMARK_PLAYBOOK.md
- Added detailed diagnostics mode documentation

Project Cleanup:
- Updated .gitignore (dev-docs/, benchmark_results)
- Removed 7 development documents from root
- Better separation of user vs developer documentation

Files changed: 12 (+523, -6,598 lines)
Token savings: ~750-1000 tokens from tool optimization

--- a/.gitignore
+++ b/.gitignore
@@ -102,3 +102,9 @@ Thumbs.db
 
 *.db-shm
 *.db-wal
+
+# Development documentation (archived in dev-docs/)
+dev-docs/
+
+# Benchmark results
+benchmark_results*.txt
